# euler-project-rs

./: Cargo.toml  README.md
common/primes/src/: lib.rs
common/triangular_numbers/: Cargo.toml
common/triangular_numbers/src/: lib.rs
problem_01/src/: main.rs
problem_02/src/: main.rs
problem_04/src/: main.rs
problem_05/: Cargo.toml
problem_05/src/: main.rs
problem_06/: Cargo.toml
problem_06/src/: main.rs
problem_07/: Cargo.toml
problem_07/src/: main.rs
problem_08/: Cargo.toml
problem_08/src/: main.rs
problem_09/: Cargo.toml
problem_09/src/: main.rs
problem_10/: Cargo.toml
problem_10/src/: main.rs
problem_11/: Cargo.toml
problem_11/src/: main.rs
