[workspace]

members = [
    "problem_05",
    "problem_08",
    "problem_04",
    "problem_07",
    "problem_02",
    "problem_10",
    "problem_01",
    "problem_11",
    "problem_12",
    "problem_03",
    "problem_09",
    "problem_06",
    "README.md",
    "common/primes",
    "common/triangular_numbers",
]
